javax to jakarta, jena updates