@@ -26,7 +26,6 @@ import java.util.stream.Stream;
 import org.apache.jena.graph.Node;
 import org.apache.jena.graph.NodeFactory;
 import org.apache.jena.graph.Triple;
-import org.apache.jena.graph.impl.LiteralLabel;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -42,17 +41,17 @@ public class WrappingStreamTest {
     protected Node subject = NodeFactory.createURI("http://example.org/subject");
     protected Node predicate = NodeFactory.createURI("http://example.org/predicate");
 
-    protected Node objectA = NodeFactory.createLiteral("a");
-    protected Node objectB = NodeFactory.createLiteral("b");
-    protected Node objectC = NodeFactory.createLiteral("c");
+    protected Node objectA = NodeFactory.createLiteralString("a");
+    protected Node objectB = NodeFactory.createLiteralString("b");
+    protected Node objectC = NodeFactory.createLiteralString("c");
 
-    protected Node objectFloat1 = NodeFactory.createLiteral("1.0");
-    protected Node objectFloat2 = NodeFactory.createLiteral("2.0");
-    protected Node objectFloat3 = NodeFactory.createLiteral("3.0");
+    protected Node objectFloat1 = NodeFactory.createLiteralString("1.0");
+    protected Node objectFloat2 = NodeFactory.createLiteralString("2.0");
+    protected Node objectFloat3 = NodeFactory.createLiteralString("3.0");
 
-    protected Node objectInt1 = NodeFactory.createLiteral("1");
-    protected Node objectInt2 = NodeFactory.createLiteral("2");
-    protected Node objectInt3 = NodeFactory.createLiteral("3");
+    protected Node objectInt1 = NodeFactory.createLiteralString("1");
+    protected Node objectInt2 = NodeFactory.createLiteralString("2");
+    protected Node objectInt3 = NodeFactory.createLiteralString("3");
 
     @BeforeEach
     public void setUp() {
@@ -97,7 +96,7 @@ public class WrappingStreamTest {
         // Filter out things matching "a"
         final var filteredStream = stream.map(Triple::getObject)
                 .filter(s -> !s.equals(objectA))
-                .collect(Collectors.toList());
+                .toList();
         assertEquals(2, filteredStream.size());
         assertTrue(filteredStream.contains(objectB));
         assertTrue(filteredStream.contains(objectC));
@@ -129,7 +128,7 @@ public class WrappingStreamTest {
         stream = generateTextStream();
         // Do any things match "d"?
         final var anyMatchFalse = stream
-                .anyMatch(s -> s.getObject().equals(NodeFactory.createLiteral("d")));
+                .anyMatch(s -> s.getObject().equals(NodeFactory.createLiteralString("d")));
         assertFalse(anyMatchFalse);
     }
 
@@ -144,7 +143,7 @@ public class WrappingStreamTest {
     public void testCollectExtended() {
         final var result = stream.collect(
                 StringBuilder::new,  // Supplier
-                (sb, t) -> sb.append(t.getObject().getLiteral().getValue()),  // Accumulator
+                (sb, t) -> sb.append(t.getObject().getLiteralValue()),  // Accumulator
                 StringBuilder::append   // Combiner (for parallelism)
         );
         assertEquals("abc", result.toString());
@@ -195,18 +194,18 @@ public class WrappingStreamTest {
                 .flatMap(s ->
                         Stream.of(
                                 s.getObject(),
-                                NodeFactory.createLiteral(
-                                        s.getObject().getLiteral().getValue().toString().toUpperCase()
+                                NodeFactory.createLiteralString(
+                                        s.getObject().getLiteralValue().toString().toUpperCase()
                                 )
                         ))
-                .collect(Collectors.toList());
+                .toList();
         assertEquals(6, flatMapped.size());
         assertTrue(flatMapped.contains(objectA));
-        assertTrue(flatMapped.contains(NodeFactory.createLiteral("A")));
+        assertTrue(flatMapped.contains(NodeFactory.createLiteralString("A")));
         assertTrue(flatMapped.contains(objectB));
-        assertTrue(flatMapped.contains(NodeFactory.createLiteral("B")));
+        assertTrue(flatMapped.contains(NodeFactory.createLiteralString("B")));
         assertTrue(flatMapped.contains(objectC));
-        assertTrue(flatMapped.contains(NodeFactory.createLiteral("C")));
+        assertTrue(flatMapped.contains(NodeFactory.createLiteralString("C")));
     }
 
     @Test
@@ -214,7 +213,7 @@ public class WrappingStreamTest {
         stream = generateFloatStream();
         final var flatMapped = stream
                 .flatMapToDouble(s -> {
-                    final var o = s.getObject().getLiteral().toString();
+                    final var o = s.getObject().getLiteralValue().toString();
                     return DoubleStream.of(Double.parseDouble(o));
                 }).min().stream().findFirst();
         assertTrue(flatMapped.isPresent());
@@ -226,7 +225,7 @@ public class WrappingStreamTest {
         stream = generateIntStream();
         final var flatMapped = stream
                 .flatMapToInt(s -> {
-                    final var o = s.getObject().getLiteral().toString();
+                    final var o = s.getObject().getLiteralValue().toString();
                     return IntStream.of(Integer.parseInt(o));
                 })
                 .min().stream().findFirst();
@@ -239,7 +238,7 @@ public class WrappingStreamTest {
         stream = generateIntStream();
         final var flatMapped = stream
                 .flatMapToLong(s -> {
-                    final var o = s.getObject().getLiteral().toString();
+                    final var o = s.getObject().getLiteralValue().toString();
                     return LongStream.of(Long.parseLong(o));
                 })
                 .min().stream().findFirst();
@@ -251,7 +250,7 @@ public class WrappingStreamTest {
     public void testForEach() {
         final var result = new StringBuilder();
         stream.forEach(s -> {
-                    final var o = s.getObject().getLiteral().getValue().toString();
+                    final var o = s.getObject().getLiteralValue().toString();
                     result.append(o);
                 });
         assertTrue(
@@ -268,7 +267,7 @@ public class WrappingStreamTest {
     public void testForEachOrdered() {
         final var result = new StringBuilder();
         stream.forEachOrdered(s -> {
-            final var o = s.getObject().getLiteral().getValue().toString();
+            final var o = s.getObject().getLiteralValue().toString();
             result.append(o);
         });
         assertEquals("abc", result.toString());
@@ -277,8 +276,8 @@ public class WrappingStreamTest {
     @Test
     public void testMap() {
         final var mapped = stream.map(Triple::getObject)
-                .map(Node::getLiteral).map(LiteralLabel::toString)
-                .map(String::toUpperCase).collect(Collectors.toList());
+                .map(Node::getLiteralValue).map(Object::toString)
+                .map(String::toUpperCase).toList();
         assertEquals(3, mapped.size());
         assertTrue(mapped.contains("A"));
         assertTrue(mapped.contains("B"));
@@ -293,7 +292,7 @@ public class WrappingStreamTest {
         stream = generateFloatStream();
         final var mapped = stream
                 .mapToDouble(s -> {
-                    final var o = s.getObject().getLiteral().toString();
+                    final var o = s.getObject().getLiteralValue().toString();
                     return Double.parseDouble(o);
                 }).reduce(0, Double::sum);
         assertEquals(6.0, mapped);
@@ -304,7 +303,7 @@ public class WrappingStreamTest {
         stream = generateIntStream();
         final var mapped = stream
                 .mapToInt(s -> {
-                    final var o = s.getObject().getLiteral().toString();
+                    final var o = s.getObject().getLiteralValue().toString();
                     return Integer.parseInt(o);
                 }).reduce(0, Integer::sum);
         assertEquals(6, mapped);
@@ -315,7 +314,7 @@ public class WrappingStreamTest {
         stream = generateIntStream();
         final var mapped = stream
                 .mapToLong(s -> {
-                    final var o = s.getObject().getLiteral().toString();
+                    final var o = s.getObject().getLiteralValue().toString();
                     return Long.parseLong(o);
                 }).reduce(0, Long::sum);
         assertEquals(6L, mapped);
@@ -325,8 +324,8 @@ public class WrappingStreamTest {
     public void testMax() {
         stream = generateIntStream();
         final var max = stream.max((s1, s2) -> {
-            final var o1 = Integer.parseInt(s1.getObject().getLiteral().toString());
-            final var o2 = Integer.parseInt(s2.getObject().getLiteral().toString());
+            final var o1 = Integer.parseInt(s1.getObject().getLiteralValue().toString());
+            final var o2 = Integer.parseInt(s2.getObject().getLiteralValue().toString());
             return o1 - o2;
         });
         assertTrue(max.isPresent());
@@ -337,16 +336,16 @@ public class WrappingStreamTest {
     public void testMin() {
         stream = generateIntStream();
         final var min = stream.min((s1, s2) -> {
-            final var o1 = Integer.parseInt(s1.getObject().getLiteral().toString());
-            final var o2 = Integer.parseInt(s2.getObject().getLiteral().toString());
+            final var o1 = Integer.parseInt(s1.getObject().getLiteralValue().toString());
+            final var o2 = Integer.parseInt(s2.getObject().getLiteralValue().toString());
             return o1 - o2;
         });
         assertTrue(min.isPresent());
         assertEquals(objectInt1, min.get().getObject());
         stream = generateTextStream();
         final var min2 = stream.min((s1, s2) -> {
-            final var o1 = s1.getObject().getLiteral().toString();
-            final var o2 = s2.getObject().getLiteral().toString();
+            final var o1 = s1.getObject().getLiteralValue().toString();
+            final var o2 = s2.getObject().getLiteralValue().toString();
             return o1.compareTo(o2);
         });
         assertTrue(min2.isPresent());
@@ -355,7 +354,7 @@ public class WrappingStreamTest {
 
     @Test
     public void testNoneMatch() {
-        assertTrue(stream.noneMatch(s -> s.getObject().equals(NodeFactory.createLiteral("d"))));
+        assertTrue(stream.noneMatch(s -> s.getObject().equals(NodeFactory.createLiteralString("d"))));
         stream = generateTextStream();
         assertFalse(stream.noneMatch(s -> s.getObject().equals(objectA)));
     }
@@ -380,46 +379,46 @@ public class WrappingStreamTest {
 
     @Test
     public void testReduceIdentity() {
-        final var reduced = stream.reduce(Triple.create(subject, predicate, NodeFactory.createLiteral("")),
+        final var reduced = stream.reduce(Triple.create(subject, predicate, NodeFactory.createLiteralString("")),
                 (s1, s2) -> Triple.create(s1.getSubject(), s1.getPredicate(),
-                        NodeFactory.createLiteral(
-                                s1.getObject().getLiteral().getValue().toString() +
-                                        s2.getObject().getLiteral().getValue().toString()
+                        NodeFactory.createLiteralString(
+                                s1.getObject().getLiteralValue().toString() +
+                                        s2.getObject().getLiteralValue().toString()
                         )));
-        assertEquals("abc", reduced.getObject().getLiteral().getValue().toString());
+        assertEquals("abc", reduced.getObject().getLiteralValue().toString());
     }
 
     @Test
     public void testReduce() {
         final var reduced = stream.reduce(
                 (s1, s2) -> Triple.create(s1.getSubject(), s1.getPredicate(),
-                        NodeFactory.createLiteral(
-                                s1.getObject().getLiteral().getValue().toString() +
-                                        s2.getObject().getLiteral().getValue().toString()
+                        NodeFactory.createLiteralString(
+                                s1.getObject().getLiteralValue().toString() +
+                                        s2.getObject().getLiteralValue().toString()
                         )));
-        final var reducedString = reduced.map(s -> s.getObject().getLiteral().getValue().toString());
+        final var reducedString = reduced.map(s -> s.getObject().getLiteralValue().toString());
         assertEquals("abc", reducedString.orElse(""));
     }
 
     @Test
     public void testReduceWithCombiner() {
-        final var identity = Triple.create(subject, predicate, NodeFactory.createLiteral(""));
+        final var identity = Triple.create(subject, predicate, NodeFactory.createLiteralString(""));
 
         final var reduced = stream.reduce(
                 identity,
                 (s1, s2) -> Triple.create(s1.getSubject(), s1.getPredicate(),
-                        NodeFactory.createLiteral(
-                                s1.getObject().getLiteral().getValue().toString() +
-                                        s2.getObject().getLiteral().getValue().toString()
+                        NodeFactory.createLiteralString(
+                                s1.getObject().getLiteralValue().toString() +
+                                        s2.getObject().getLiteralValue().toString()
                         )),
                 (t1, t2) -> Triple.create(t1.getSubject(), t1.getPredicate(),
-                        NodeFactory.createLiteral(
-                                t1.getObject().getLiteral().getValue().toString() +
-                                        t2.getObject().getLiteral().getValue().toString()
+                        NodeFactory.createLiteralString(
+                                t1.getObject().getLiteralValue().toString() +
+                                        t2.getObject().getLiteralValue().toString()
                         ))
         );
 
-        assertEquals("abc", reduced.getObject().getLiteral().getValue().toString());
+        assertEquals("abc", reduced.getObject().getLiteralValue().toString());
     }
 
     @Test
